Fixes #6027.  Add overflow:hidden to dijitTextBox css rule.
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@12815 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/dijit.css
+++ b/themes/dijit.css
@@ -344,6 +344,7 @@ table .dijitComboButton .dijitButtonNode {
 .dijitComboBox,
 .dijitSpinner {
 	border: solid black 1px;
+	overflow: hidden; /* #6027 */
 	width: 15em;	/* need to set default size on outer node since inner nodes say <input style="width:100%"> and <td width=100%>.  user can override */
 }
 
